[workspace]
members = [
  "blockchain",
  "matrix",
  "mempool",
  "model",
  "rpc",
  "utils",
]

[package]
name = "ensicoin_rust"
version = "0.1.0"
authors = ["Arttaaz <arttaaz@gmail.com>"]
edition = "2018"

[features]
default = ["rpc-server"]
matrix-discovery = ["matrix"]
rpc-server = ["rpc"]

[dependencies]
bincode             = "*"
blockchain          = { path = "./blockchain" }
dirs                = "*"
matrix              = { path = "./matrix", optional = true }
mempool             = { path = "./mempool" }
model               = { path = "./model" }
rpc                 = { path = "./rpc", optional = true }
serde               = "1.0"
serde_json          = "1.0"
sled                = "*"
utils               = { path = "./utils" }
tokio               = "0.2.0-alpha.4"
tracing             = "0.1"
tracing-subscriber  = "0.1"
