[workspace]
members = [
  "blockchain",
  # "matrix",
  "mempool",
  "model",
  # "rpc",
  "utils",
]

[package]
name = "ensicoin_rust"
version = "0.1.0"
authors = ["Arttaaz <arttaaz@gmail.com>"]
edition = "2018"

# [features]
# default = ["rpc-server"]
# matrix-discovery = ["matrix"]
# rpc-server = ["rpc"]

[dependencies]
bincode             = "*"
blockchain          = { path = "./blockchain" }
cookie-factory      = "0.3"
dirs                = "*"
# matrix              = { path = "./matrix", optional = true }
mempool             = { path = "./mempool" }
model               = { path = "./model" }
nom                 = "5.0"
# rpc                 = { path = "./rpc", optional = true }
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
sled                = "*"
utils               = { path = "./utils" }
tokio               = { version = "0.2", features = ["io-util", "macros", "rt-core", "sync", "stream", "tcp"] }
tracing             = "0.1"
tracing-subscriber  = "0.1"
