[package]
name = "blockchain"
version = "0.1.0"
authors = ["Arttaaz <arttaaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs            = "*"
model           = { path = "../model" }
sled            = "*"
utils           = { path = "../utils" }
