[package]
name = "ensicoin-rust"
version = "0.1.0"
authors = ["Arttaaz <arttaaz@gmail.com>"]

[dependencies]
bincode         = "*"
blockchain      = { path = "../blockchain" }
dirs            = "*"
grpc            = "0.6.1"
mempool         = { path = "../mempool" }
model           = { path = "../model" }
rpc             = { path = "../rpc" }
serde           = "1.0"
serde_json      = "1.0"
sled            = "*"
utils           = { path = "../utils" }
