[package]
name = "rpc"
version = "0.1.0"
authors = ["Arttaaz <arttaaz@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1.0-alpha.3"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"

[build-dependencies]
tonic-build = "0.1.0-alpha.3"
