[package]
name = "utils"
version = "0.1.0"
authors = ["Arttaaz <arttaaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode         = "*"
sha2            = "0.8"
sled            = "*"
structopt       = "0.2"
tokio           = "0.2.0-alpha.1"
